--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <a href="https://www.nostalgiaforum.xyz/">https://www.nostalgiaforum.xyz/</a> Main domain<br>
     <a href="https://nostalgiaforum.win/">https://nostalgiaforum.win/</a> Additional domain<br>
     <a href="https://nostalgiaforum.rf.gd/">https://nostalgiaforum.rf.gd/</a> Main domain<br>
+
+    <br>
+    <p>View forum saves at <a href="https://web.archive.org/web/nostalgiaforum.xyz/">https://web.archive.org/web/nostalgiaforum.xyz/</a></p>
 </body>
 </html>
