--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NostalgiaForum domains list</title>
+    <style>
+        body {
+            font-size: 18px;
+            margin-left: 48px;
+        }
+    </style>
 </head>
 <body>
     <h1>NostalgiaForum</h1>
-    <p>List of forum domains</p>
+    <p>List of forum domains</p><a href="news.html">News</a>
     <hr>
     <a href="https://www.nostalgiaforum.xyz/">https://www.nostalgiaforum.xyz/</a> Main domain<br>
     <a href="https://nostalgiaforum.win/">https://nostalgiaforum.win/</a> Additional domain<br>
@@ -15,5 +21,8 @@
 
     <br>
     <p>View forum saves at <a href="https://web.archive.org/web/nostalgiaforum.xyz/">https://web.archive.org/web/nostalgiaforum.xyz/</a></p>
+
+    <br>
+    
 </body>
 </html>
