added navigation and other one small change

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <style>
         body {
             font-size: 18px;
-            margin-left: 48px;
+            padding-left: 48px;
         }
     </style>
 </head>
 <body>
     <h1>NostalgiaForum</h1>
-    <p>List of forum domains</p><a href="news.html">News</a>
+    <p>List of forum domains</p>
+    <p>
+        <b>Home</b>
+        <a href="news.html">News</a>
+        
+    </p>
     <hr>
     <a href="https://www.nostalgiaforum.xyz/">https://www.nostalgiaforum.xyz/</a> Main domain<br>
     <a href="https://nostalgiaforum.win/">https://nostalgiaforum.win/</a> Additional domain<br>
