--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-size: 18px;
-            margin-left: 48px;
+            padding-left: 48px;
         }
 
         b.title {
@@ -23,6 +23,10 @@
 <body>
     <h1>NostalgiaForum</h1>
     <p>News and changes on the forum</p>
+    <p>
+        <a href="index.html">Home</a>
+        <b>News</b>
+    </p>
     <hr><br>
 
     <h1 style="background-color: black; color: white; padding-left: 8px;">Global</h1><br>
